# ufbx.github.io

./: .eleventy.js  .gitignore  README.md  build.bat  index.html  package-lock.json  package.json  sfs-deps.json  skinned_human.fbx  style.css
.github/workflows/: ci.yml  deploy.yml  test.yml
misc/: typos.toml
native/: CMakeLists.txt
native/example/: example_base.h  example_graphics.c  example_graphics.h  example_math.h  mesh.fs.glsl  mesh.vs.glsl  test.c  test.cpp
native/example_app/: CMakeLists.txt  build_linux.sh  build_windows.bat
native/example_app/src/: example_app.c  example_app.h  example_math.h  test.c
native/js_viewer/: CMakeLists.txt  js_viewer.c  post_js.js
native/viewer/: CMakeLists.txt  arena.c  arena.h  json_rpc.c  json_rpc.h  resources.c  resources.h  serialization.c  serialization.h  ufbx.c  ufbx.h  viewer.c  viewer.h
native/viewer/shaders/: copy.glsl  debug.glsl  icon.glsl  mesh.glsl
native/window/: CMakeLists.txt  window.c
parser/: parsette.py  ufbx_parser.py
script/: common.d.ts  common.js  icons.jsx  index.js  index.jsx  package-lock.json  package.json  style.css  tsconfig.json
script/common/: vec3.js
script/components/: common.js  doc-viewer.jsx  fbx-viewer.jsx  global-drag.js  global-state.js  icon.jsx  load-options.jsx  outliner.jsx  property-sheet.jsx  vertex-display.jsx  virtual-table.jsx
script/viewer/: rpc.d.ts  rpc.js  viewer.js  viewer.ts
scripts/: components.jsx  index.js
site/: getting-started.md  index.md  package-lock.json  package.json  reference.11ty.js  ufbx-highlight.js
site/_includes/: bottom-nav.md  guide.css  highlight-page.js  hover.js  interactive.md  nav.liquid  reference.css  style.css  viewer.md
site/_includes/layouts/: guide.liquid  redirect.liquid  reference.liquid
site/advanced/: build-options.md  index.md
site/elements/: animation.md  deformers.md  index.md  meshes.md  nodes.md
site/fbx/: index.md  node-transforms.md
site/guide/: guide.json
site/guide/advanced/: index.md  memory-allocation.md  nurbs.md  subdivision.md
site/guide/basics/: animation.md  deformers.md  geometry.md  getting-started.html  getting-started.md  index.md  load-options.md  material.md  scene-structure.md
site/guide/elements/: mesh.md  node.md
static/models/: complex_transforms.fbx  cube.fbx  cube_animations.fbx  lamp.fbx  light.fbx  material_parts.fbx  mushnub_evolved.fbx  my_scene.fbx  skinned_human.fbx  stack.fbx  units_blender_default.fbx  units_blender_meters.fbx  units_maya_default.fbx
test-example/: Dockerfile  Makefile  example  example_base.h  example_graphics.h  test.c
test-example/sokol/: sokol_gfx.h  sokol_glue.h  sokol_log.h
tests/: compile-examples.py  lint-html.py  zip-examples.py
tests/example-frames/: vertices-1.c  vertices-1.rs  vertices-2.c  vertices-2.cpp  vertices-2.rs
tests/example-frames/animation/: bake-anim.c  bake-anim.cpp  bake-anim.rs
tests/example-frames/deformers/: blend-shapes.c  blend-shapes.cpp  blend-shapes.rs  skin-vertex.c  skin-vertex.cpp  skin-vertex.rs  skin-weights.c  skin-weights.cpp  skin-weights.rs
tests/example-frames/elements/: light-intensity.c  light-intensity.cpp  light-intensity.rs
tests/example-frames/fbx-node-transforms/: get-geometry-transform.cpp  get-transform-adjust.cpp  get-transform.cpp
tests/example-frames/getting-started/: load-scene-normalized.c  load-scene-normalized.rs  load-scene.c  load-scene.cpp
tests/example-frames/meshes/: draw-polygons.rs  mesh-parts.c  mesh-parts.cpp  mesh-parts.rs
tests/example-frames/nodes/: draw-polygons.c  draw-polygons.cpp  space-conversion.c  space-conversion.cpp  space-conversion.rs
tests/example-frames/overview/: hello-ufbx.c  hello-ufbx.cpp  hello-ufbx.rs
tests/example-outputs/: load-scene-2.txt  vertices-1.txt  vertices-2.txt
tests/example-outputs/animation/: bake-anim.txt
tests/example-outputs/deformers/: blend-shapes.txt  skin-vertex.txt  skin-weights.txt
tests/example-outputs/elements/: light-intensity.txt
tests/example-outputs/fbx-node-transforms/: get-geometry-transform.txt  get-transform-adjust.txt  get-transform.txt
tests/example-outputs/getting-started/: load-scene-normalized.txt
tests/example-outputs/meshes/: mesh-parts.txt
tests/example-outputs/nodes/: draw-polygons.txt  space-conversion.txt
tests/example-outputs/overview/: hello-ufbx.txt
wasm/: external.c  json_output.cpp  viewer.cpp
wasm/shader/: copy.glsl  copy.h
